--- a/public/index.html
+++ b/public/index.html
@@ -5,6 +5,7 @@
         margin-bottom: 15px;
     }
 </style>
+<script src="https://apis.google.com/js/platform.js?onload=onLoadCallback" async></script>
 <body>
     <div id="token"></div>
     <div id="msg"></div>
